--- a/Challenges/Challenge1.ipynb
+++ b/Challenges/Challenge1.ipynb
@@ -1421,7 +1421,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 29/29 [00:00<00:00, 33.65it/s]"
+      "100%|██████████| 29/29 [00:00<00:00, 32.51it/s]"
      ]
     },
     {
@@ -1429,7 +1429,7 @@
      "output_type": "stream",
      "text": [
       "[LightGBM] [Info] Number of positive: 232, number of negative: 133\n",
-      "[LightGBM] [Warning] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000189 seconds.\n",
+      "[LightGBM] [Warning] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000230 seconds.\n",
       "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 3656\n",
       "[LightGBM] [Info] Number of data points in the train set: 365, number of used features: 30\n",
@@ -1587,7 +1587,7 @@
        "      <td>0.95</td>\n",
        "      <td>0.95</td>\n",
        "      <td>0.96</td>\n",
-       "      <td>0.08</td>\n",
+       "      <td>0.07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>SVC</th>\n",
@@ -1635,7 +1635,7 @@
        "      <td>0.94</td>\n",
        "      <td>0.94</td>\n",
        "      <td>0.94</td>\n",
-       "      <td>0.14</td>\n",
+       "      <td>0.15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>SGDClassifier</th>\n",
@@ -1651,7 +1651,7 @@
        "      <td>0.93</td>\n",
        "      <td>0.93</td>\n",
        "      <td>0.94</td>\n",
-       "      <td>0.05</td>\n",
+       "      <td>0.06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>PassiveAggressiveClassifier</th>\n",
@@ -1683,7 +1683,7 @@
        "      <td>0.93</td>\n",
        "      <td>0.93</td>\n",
        "      <td>0.94</td>\n",
-       "      <td>0.02</td>\n",
+       "      <td>0.03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>AdaBoostClassifier</th>\n",
@@ -1699,7 +1699,7 @@
        "      <td>0.92</td>\n",
        "      <td>0.92</td>\n",
        "      <td>0.93</td>\n",
-       "      <td>0.04</td>\n",
+       "      <td>0.05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>DecisionTreeClassifier</th>\n",
@@ -1755,7 +1755,7 @@
        "      <td>0.89</td>\n",
        "      <td>0.89</td>\n",
        "      <td>0.90</td>\n",
-       "      <td>0.01</td>\n",
+       "      <td>0.02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>QuadraticDiscriminantAnalysis</th>\n",
@@ -1834,28 +1834,28 @@
        "\n",
        "                               Time Taken  \n",
        "Model                                      \n",
-       "ExtraTreesClassifier                 0.08  \n",
+       "ExtraTreesClassifier                 0.07  \n",
        "SVC                                  0.01  \n",
        "Perceptron                           0.01  \n",
        "LinearSVC                            0.01  \n",
        "KNeighborsClassifier                 0.14  \n",
        "LogisticRegression                   0.02  \n",
-       "RandomForestClassifier               0.14  \n",
+       "RandomForestClassifier               0.15  \n",
        "SGDClassifier                        0.01  \n",
-       "BaggingClassifier                    0.05  \n",
+       "BaggingClassifier                    0.06  \n",
        "PassiveAggressiveClassifier          0.01  \n",
        "LabelPropagation                     0.01  \n",
        "LabelSpreading                       0.01  \n",
-       "CalibratedClassifierCV               0.02  \n",
+       "CalibratedClassifierCV               0.03  \n",
        "AdaBoostClassifier                   0.15  \n",
-       "LGBMClassifier                       0.04  \n",
+       "LGBMClassifier                       0.05  \n",
        "DecisionTreeClassifier               0.01  \n",
        "XGBClassifier                        0.05  \n",
        "LinearDiscriminantAnalysis           0.01  \n",
        "RidgeClassifier                      0.01  \n",
        "RidgeClassifierCV                    0.01  \n",
        "BernoulliNB                          0.01  \n",
-       "NuSVC                                0.01  \n",
+       "NuSVC                                0.02  \n",
        "QuadraticDiscriminantAnalysis        0.01  \n",
        "NearestCentroid                      0.01  \n",
        "ExtraTreeClassifier                  0.01  \n",
@@ -1869,7 +1869,7 @@
     }
    ],
    "source": [
-    "#Ahora utilizaremos LazyPredict para poder observar que \n",
+    "#Ahora utilizaremos LazyPredict para poder observar que modelo es mejor\n",
     "from lazypredict.Supervised import LazyClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
     "X_train, X_test, y_train, y_test = train_test_split(normalized_x, y,test_size=.3,random_state =123)\n",
